fixed partner contact section mobile responsiveness

--- a/src/pages/Home/Home.style.css
+++ b/src/pages/Home/Home.style.css
@@ -207,3 +207,13 @@
   background-size: cover;
   background-position: center;
 }
+
+.partner__contact {
+  flex-direction: row;
+}
+
+@media screen and (max-width: 900px) {
+  .partner__contact {
+    flex-direction: column;
+  }
+}
